# universal_product_parser

./: LICENSE  README.md  environment.yml  requirements.txt
config/: image_processing.yaml  parser_config.yaml
docs/: installation_guide.md  user_manual.md
scripts/: setup_environment.sh  update_models.sh
src/cli/: __init__.py  interface.py
src/content_processor/: __init__.py  nlp_engine.py  synonym_manager.py  text_rewriter.py
src/core/: __init__.py  navigation_manager.py  structure_detector.py
universal_product_parser/: pyproject.toml
universal_product_parser/config/: logging_config.conf  nlp_config.yaml
universal_product_parser/data/input/synonym_dictionaries/: technical_terms.json
universal_product_parser/docs/: architecture.md
universal_product_parser/scripts/: cleanup.sh  install_dependencies.sh  run_parser.sh  verify_installation.py
universal_product_parser/src/: __init__.py
universal_product_parser/src/cli/: argument_parser.py  main.py
universal_product_parser/src/content_processor/: content_validator.py
universal_product_parser/src/core/: adaptive_parser.py  content_extractor.py
universal_product_parser/src/data/input/synonym_dictionaries/: general_synonyms.json
universal_product_parser/src/data_analyzer/: __init__.py  trend_analyzer.py
universal_product_parser/src/exporter/: backup_manager.py  template_manager.py
universal_product_parser/src/image_processor/: image_editor.py  watermark_remover.py
universal_product_parser/src/image_processor/models/: u2net_model.py
universal_product_parser/src/utils/: logger.py
(+21 files in other folders)
