[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-product-parser"
version = "1.0.0"
description = "Универсальный парсер товаров с автоматической обработкой контента"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "pandas>=2.1.3",
    "openpyxl>=3.1.2",
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "colorama>=0.4.6"
]

[project.scripts]
product-parser = "src.cli.main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
